@@ -5,6 +5,7 @@ Revision history for Web-PageMeta
     - add option to set extra http request headers
     - throw 404 if there is no image
     - support cookie jar
+    - keep also page body and headers (allow post-processing)
 
 0.03    25.02.2021
     - add option to set user-agent for http requests
